kubernetes/!old/apps/overlays/staging-us-east/clients/bachata-magic/version.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bachata-magic
  namespace: clients
spec:
  template:
    spec:
      containers:
      - name: bachata-magic-application
        image: ghcr.io/atlanticsites/bachata-magic:1ef3c90
