kubernetes/!old/apps/overlays/staging-us-east/clients/bachata-magic/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: bachata-magic
 namespace: clients
 annotations:
   cert-manager.io/cluster-issuer: "ca-issuer"
spec:
 tls:
   - hosts:
       - bachata.atlanticsites.com
     secretName: tls-bachata-magic-ingress-dns
 rules:
   - host: bachata.atlanticsites.com
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: bachata-magic
               port:
                 name: web
